// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V2 > receiver events "currencies" 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Deposited",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 3000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Deposited",
    "section": "currencies",
  },
]
`;

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V2 > receiver events "tokens" 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 3000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Deposited",
    "section": "tokens",
  },
]
`;

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V2 > sender events {"section":"balances","method":"Withdraw"} 1`] = `
[
  {
    "data": {
      "amount": "(rounded 200000000000)",
      "who": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Withdraw",
    "section": "balances",
  },
]
`;

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V3 > receiver events "currencies" 1`] = `
[
  {
    "data": {
      "amount": "(rounded 10000000)",
      "currencyId": 5,
      "from": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
      "to": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": 200000000000,
      "currencyId": 5,
      "from": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
      "to": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 100000000000000000000)",
      "currencyId": "(rounded 100)",
      "from": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
      "to": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 2000000000)",
      "currencyId": 1,
      "who": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 100000000000000000000)",
      "currencyId": "(rounded 100)",
      "who": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 100000000)",
      "currencyId": "(rounded 20)",
      "from": "7LVGEVLFXpsCCtnsvhzkSMQARU7gRVCtwMckG7u7d3V6FVvG",
      "to": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Deposited",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 3000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Deposited",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 200000000000000000)",
      "currencyId": "(rounded 100)",
      "from": "7L53bUTCCAvmCxhe15maHwJZbjQYH89LkXuyTnTi1J58xyFC",
      "to": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 20000000000000)",
      "currencyId": 0,
      "from": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
      "to": "7L53bUTCCAvmCxhe15maHwJZbjQYH89LkXuyTnTi1J58xyFC",
    },
    "method": "Transferred",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 3000000)",
      "currencyId": 1,
      "who": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
  {
    "data": {
      "amount": "(rounded 60000000000)",
      "currencyId": 0,
      "from": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
      "to": "7L53bUTCQURi4iNpkVMox9K5XUra9Nom1nvJDMwxNRdJR7zu",
    },
    "method": "Transferred",
    "section": "currencies",
  },
]
`;

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V3 > receiver events "tokens" 1`] = `
[
  {
    "data": {
      "amount": "(rounded 10000000)",
      "currencyId": 5,
      "who": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Unreserved",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 10000000)",
      "currencyId": 5,
      "from": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
      "to": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": 200000000000,
      "currencyId": 5,
      "who": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Unreserved",
    "section": "tokens",
  },
  {
    "data": {
      "amount": 200000000000,
      "currencyId": 5,
      "from": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
      "to": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 100000000000000000000)",
      "currencyId": "(rounded 100)",
      "who": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 100000000000000000000)",
      "currencyId": "(rounded 100)",
      "from": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
      "to": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 2000000000)",
      "currencyId": 1,
      "who": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 200000000000000000)",
      "currencyId": "(rounded 100)",
      "who": "7L53bUTCCAvmCxhe15maHwJZbjQYH89LkXuyTnTi1J58xyFC",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 200000000000000000)",
      "currencyId": "(rounded 100)",
      "from": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
      "to": "7L53bUTCCAvmCxhe15maHwJZbjQYH89LkXuyTnTi1J58xyFC",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 100000000000000000000)",
      "currencyId": "(rounded 100)",
      "who": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 100000000)",
      "currencyId": "(rounded 20)",
      "from": "7LVGEVLFXpsCCtnsvhzkSMQARU7gRVCtwMckG7u7d3V6FVvG",
      "to": "7KCp4eenFS4CowF9SpQE5BBCj5MtoBA3K811tNyRmhLfH1aV",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 1000000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 3000000000000)",
      "currencyId": "(rounded 30)",
      "who": "7L53bUTBopuwFt3mKUfmkzgGLayYa1Yvn1hAg9v5UMrQzTfh",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 200000000000000000)",
      "currencyId": "(rounded 100)",
      "from": "7L53bUTCCAvmCxhe15maHwJZbjQYH89LkXuyTnTi1J58xyFC",
      "to": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 3000000)",
      "currencyId": 1,
      "who": "7L53bUTBbfuj14UpdCNPwmgzzHSsrsTWBHX5pys32mVWM3C1",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
]
`;

exports[`Limited Reserve Transfers > Kilt -> Hydration at block V3 > sender events {"section":"balances","method":"Withdraw"} 1`] = `
[
  {
    "data": {
      "amount": "(rounded 200000000000)",
      "who": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Withdraw",
    "section": "balances",
  },
]
`;
